Cleaned the code, after having used FindBugs to check it. Many little errors has been fixed. Tests has been added
git-svn-id: https://svn.apache.org/repos/asf/directory/trunks/shared@491433 13f79535-47bb-0310-9956-ffa450edef68